Fixed sedebar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -241,7 +241,7 @@ body {
 
   .post-item {
     flex: 0 0 auto;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     border-bottom: none;
     width: 18rem;
     height: 255px;
